--- a/index.html
+++ b/index.html
@@ -48,50 +48,71 @@
 
 <div class="a">
 <p style="text-align:center;">
-做完这件头等大事，他才转身面向客人。他用快乐的眼神打量众人，立即开 始为每人祝福。他对某人耳语几句。他担忧，他解释。他安慰，他建议，他鼓 励。他叹息，他感慨。他两手一拍。总之，他在此时更像一只忙着照看其众多雏 鸡的母鸡。忙完这一切，他才瘫倒在旧沙发上，并让第一位来访者坐到自己身 边。每位来访者均有自己的问题。我对他人的问题不明就里，但我对自己当初去见神父的目的却记忆犹新。 一连九年，约翰神父均未同意我剪发当修士。他留我当见习修士，他提出剪
-发做修士的前提是获得母亲同意。可是我妈妈，上帝保佑她的在天之灵，虽然同 意我以神职人员的身份为教会服务，却不愿我进修道院终身做修士。神父则坚持 他的前提，即等到母亲同意。他常说:你如果真想做一名修士，就请求上帝，他 会在合适的时候安排好一切。
-我对他的话深信不疑。我静静地等待，同时为教会做事，先在普斯科夫洞穴 修道院做见习修士，后在皮季里姆都主教的出版社工作。一次，我去洞穴修道院 见约翰神父，无意间提及，莫斯科东正教徒们十分喜爱的顿河修道院即将重新开 办。此时，约翰神父说道 :
-“你的时机到了。快去求你妈妈为你祝福。我想，这一次她会同意的。你忍 耐了九年，从不装腔作势，你会看到，上帝会给你特殊的仁慈。你会得到一份厚 礼的!”
-随后，神父谈起他年轻时的顿河修道院，谈起被囚禁在那里的圣徒吉洪牧 首，神父对吉洪牧首敬爱有加。神父说道，1990 年，就在我与他此刻所在的修 道小室，他见到了圣徒吉洪牧首，牧首曾预言俄国教会将发生分裂。(这一分裂 后果然在乌克兰发生。)
-最终，约翰神父在他修道小室里的圣母像《逝者的追索》前祷告，然后让我 赶回家中，在取得母亲的祝福后去见至圣牧首，请他允许我剪发当修士。
-由于约翰神父的祷告，妈妈此次出乎意料地赞同我的愿望，并用一帧圣母像 为我祝福。至圣牧首阿列克西二世将我列入莫斯科顿河修道院当时为数不多的教 友行列。
-约翰神父关于“厚礼”的预言也得到应验。事情如此 :顿河修道院院长阿加 福多尔大司祭因修道院事务紧急出差，我的剪发礼因此两度被推迟，最后，他为 我剪发那天恰逢我三十三岁生日，而且，我获教名吉洪，旨在纪念我敬爱的圣 徒、顿河修道院庇护人吉洪。可回忆的往事还有很多 ...... 在瓦连金娜·帕夫洛夫娜·科诺瓦洛娃去世后 不久，我也因病住院。我病得很重，约翰神父托他的教女娜斯佳·戈柳诺娃捎来 一信，准许我在医院吃鱼和奶制品，尽管当时正值圣诞斋戒期。友人们当时为我 安排一家好医院，病房里甚至有电视。病情稍有缓和后，我决定看看电视新闻， 我已有数年没看电视，之后，我又把电视调到有趣的电影频道 ......
-这天傍晚，娜斯佳·戈柳诺娃从洞穴修道院赶来，让护士转交我一封约翰神 父新写的信。我记得我当时正躺在病床上看一部电影，同时阅读神父的信。神父 在信的结尾写道 :“吉洪神父，我祝福你放松斋戒，但不祝福你看电视。”我连 忙下床，拔下电视机的电源插头。我当时已很清楚，不听约翰神父的话将会有何 结果。
-也有一些对约翰神父不怀好意的人。他们或出于他们心知肚明的原因，不承 认他的长老身份。但也有一些人，他们对他充满仇恨。约翰神父痛心地忍受他们 的敌意、诬陷甚至背叛，却始终对他们持有真诚的基督徒之爱。我终生铭记他 1987 年在普斯科夫洞穴修道院米哈伊尔教堂一次布道时所说的话 :“主颁戒律， 让我们爱他人，爱我们的亲人。至于他们是否爱我们，这并不是该我们操心的事 情。我们只需要关心一点，就是我们必须爱他们!”
-一位莫斯科神父曾为约翰神父的教子，一次他突然对我提出一个可怕请求， 即他要向约翰神父归还圣巾，这圣巾作为神职人员的身份象征，是约翰神父在为 他行按手礼前作为祝福授予他的。这位神父称，他对约翰神父深感失望，因为约 翰神父不赞同他的异见教会人士的观点。这位神父吐了多少委屈的苦水啊!可他 自己却任何话也听不进去，不愿了解约翰神父曾在劳改营被关数年，不愿知道约 翰神父曾遭严刑拷打却坚贞不屈，无论如何，约翰神父均非一位随大流的人。
-我怀着沉重的心情把圣巾转交约翰神父。他的反应令我惊讶。他画了一个 十字，虔敬地接过圣巾，亲吻一下，然后说道 :“我怀着爱心给出，也怀着爱心 收回。”
-后来，这位神父转至另一教区，他同样不喜欢那里，又转向第三个教区 ...... 另一证据是老莫斯科人阿德里安·亚历山大罗维奇·叶格罗夫的回忆。他写 道 :“我一生的大半时光均与已故的皮缅主教一起度过。一次我就有关教父的问 题向他询问。他对我说:能担任整个俄国之教父的人或许只有一位，就是约翰神 父。”当约翰神父偶尔来到莫斯科，皮缅牧首总要亲自邀请约翰神父前往他在佩 列捷尔金诺的住处，两人交谈甚久。
-约翰神父对教会高层充满敬重和爱意。他深信，尘世的真理仅存在于教会。 约翰神父无法忍受任何分裂和暴动，始终无所畏惧地反对此类行径，尽管他深知 这会给他带来无数诬陷，有时甚至是仇恨。他是一个真正的教会人。他很多次强 迫我们严格地按至圣牧首的决定去做，按主教和修道院院长的意见去做。
-可这绝不意味着某种机械的、不假思索的服从。有过此类事例，修道院的某 位院长和当家主教要约翰神父为某件他们业已作出、而约翰神父却不赞同的决定 祝福。修道院高层需要用这位长老的威望来支撑他们作出的决定。可是，在教会 近百年的生活经历(约翰·克列斯奇扬金四岁起就在教堂里做祭台小助手)却使 约翰神父意识到，此类管理方式不会带来任何益处。
-他们逼迫神父，即所谓“刀架脖颈”。神父和修士们均清楚，抗拒掌门主教 和院长意味着什么。约翰神父一连多日承受重压。他恭敬地解释，他无法对他心 灵不赞同的东西表达“祝福”。如若修道院高层认为必须那样做，他毫无怨言地 服从他们的决定，因为他们在上帝和教友们面前为他负责。可他认为，在此情形 下接受安排是出于激情。而作出祝福，即说出“好话”，他却无法做到。
-所有提笔追忆约翰神父的人通常均会写道，他为人温和善良，充满爱心。是 的，毫无疑问，我一生从未遇见比他更善于表达父亲般爱心和基督般爱心的人。 但得说明，约翰神父在必要的场合也十分严厉，能说出很重的话来，让对方无地 自容。我记得，当我还在洞穴修道院做见习修士时，曾听见约翰神父对两位年轻 修士说 :“你们算什么修士?你们不过是两个好小伙子!”
-约翰神父从不害怕说真话，无论对方是何人，是主教、是俗家人还是普通的 见习修士，他说真话首先是为对方好。早在童年时期，在与那些伟大的苦修者和后来的受难者们交往时，约翰神父的内心即已养成这一坚定的宗教立场。 这是他 1997 年在一封信中对我所提问题作出的答复 :
-“我生活中遇到一件事，与您的情况有些类似。我当时才十二岁，可那件事 却给我留下十分强烈的印象，那场景时至今日仍历历在目，我还记得所有人的 姓名。
-“在我们奥廖尔有一位杰出的主教，即谢拉菲姆大司祭(奥斯特罗乌莫夫)， 他是一位最智慧、最善良、最有爱心的人，任何最高级形容词用在他身上均不为 过。他以生命为代价，随时准备接受受难圣徒的荆冠，后来情况果然如此。在宽 恕星期日，这位神圣的主教将两位修士 —— 卡里斯特修士和吉洪辅祭赶出修道 院，因为他俩的一桩过错。他毫不留情地当众赶走他们，以警示其他人勿受诱 惑，然后他又立即言及宽恕星期日，请求众人的宽恕。
-“这件事在我的童年意识里留下深刻印象，因为一切都集中在了一起 :从驱 逐，亦即不宽恕，到虔敬的宽恕，再到众人的宽恕。我当时就明白了一点，即惩 罚也可以成为宽恕的开端，没有惩罚也就没有宽恕。
-“如今我仍要向谢拉菲姆主教的勇气和智慧鞠躬致敬，因为他当时给所有在 场者上的那堂课，成了他们终生借鉴的活的范例。”
-约翰神父始终在不屈不饶、充满喜悦地传播他珍视的一个显见真理，即基督 徒的尘世生活与天国教会的生活依靠牢固而又隐秘的精神纽带相互联结。约翰神 父离世的庄严时刻再次佐证了他的这一信念。
-约翰神父在九十六岁时离开我们。他死于一个对他个人而言十分重要的节 日，即俄国新受难者和苦修者纪念日。在残酷的二十世纪为基督献身的那些人， 其中有很多均为约翰神父的导师和密友。他本人也是他们中的一位。在新受难者 纪念日，2006 年 2 月 5 日清晨，在约翰神父领受圣餐之后，上帝将他召去天国。
-即便在约翰神父去世之后，有幸与他结交过的人仍能感受到他的爱意和支 持，他的祷告和关怀。这一切至今仍与我们同在，尽管约翰神父已身在天国。
-2007 年，至圣牧首阿列克西二世的命名日庆祝活动在大斋期第一个星期日举行，此日为东正教胜利节。此前一周，我与奉献节修道院教友们参加了许多令 人难忘的大斋期第一周礼拜仪式。在周六的礼拜之后，参加主教命名日活动的 来宾陆续到达。晚祷前后，直到深夜，我们均忙于接待和安置外地来的神父和 主教，他们在莫斯科通常都落脚于我们奉献节修道院。我忙得疲惫不堪，睡意难 消，便决定把睡前诵读的经文留待第二天早上再读。可令我难堪的是，次日我睡 过头，一句祈祷文也没读，便去基督救主大教堂参加礼拜。
-在我二十年的修士生涯中，我有两三次没做准备便去参加礼拜。每一次，无 论什么理由和原委均无法压抑良心发出的严厉指责，更遑论以疲惫做借口。可这 一次，我仍试图说服自己，我虽然没有事先诵读该读的经书，但我这一周毕竟早 晚都在教堂。周三和周五，还有周六，就是昨天，我还刚刚领受圣餐，读了该读 的经文和祷告文。
-我穿上祭服，正打算走上基督救主大教堂站满修士的祭坛，我甚至想起如今 某些著名神学家的话，他们认为圣餐仪式完全没什么必要 ...... 长话短说，我觉 得我几乎已经说服了我内心的谴责声音，可突然，楚瓦什都主教瓦尔纳瓦走到我 身边。我在牧首主持的礼拜中多次见过这位受众人敬重的年长主教，却从未与他 交谈。可这一次，主教却走到我身边，为我祝福，然后说道 :
-“上帝祝福你，吉洪神父，因为你拍摄的洞穴修道院影片。我非常喜欢这部 影片。我和约翰神父相识五十年，我常去洞穴修道院看他。”
-主教指的是我拍摄的那部以洞穴修道院为对象的纪录片，片中有许多与约翰 神父有关的镜头。
-“你知道我现在想起什么事情了吗?”主教继续说道，“你大约也听说过，约 翰神父五十年代在一个乡村教区做牧师，有一天晚上，在晚祷之后，有几个强盗 冲进他的屋子，把他捆起来，毒打一顿他，然后把他扔在那里，让他等死。你听 说过这事吗?”
-“是的，主教，我知道这件事。第二天早晨做礼拜之前，教友们发现了约翰 神父，为他松了绑。”神父
-
-“是的，是的，是这样的!约翰神父恢复知觉后，感谢上帝让他经受这场考 验，感谢上帝救了他，然后去主持礼拜。你知道他后来对我说过什么话吗?他说 这是他一生中唯一一次没做准备就去主持礼拜，事先没读该读的经文和祈祷文。 唉，就是这样 ...... 上帝保佑他!”
-迪奥尼西大司祭(施施金)站在一旁。我走近他身边，对他说了这件事，说 了我的懈怠，说了我与瓦尔纳瓦主教的谈话。我向迪奥尼西大司祭做忏悔，在等 待仪式开始的时候，我们谈起上帝对我们的恩赐，谈起神意的神秘莫测。
-有谁知道我们此刻见证了什么? ...... 或许，是约翰神父自另一世界借瓦尔 纳瓦主教之口来开导“这个不成熟的孩子”，就像他在一封信中对我的称呼。或 许，我们此时遇见另一位隐秘的修士和上帝的奴仆，因为这些人的存在，基督的 东正教会才永远不会衰落。谢拉菲姆大司祭
-对于我来说，谢拉菲姆神父是普斯科夫洞穴修道院中最为神秘的人。他出身 于波罗的海东岸地区一个男爵家庭，在三十年代来到修道院，侍奉苦修大司祭西 梅翁长老。
-谢拉菲姆神父很少与人交往。他身居一个充作住处的洞穴，里面又湿又暗。 做礼拜时，他低垂脑袋，全身心地投入祷告，时而动作飞快而又虔敬地画个十字。在修道院里走动的谢拉菲姆神父，也总是这副全神贯注的样子。我们这些见 习修士觉得，分散他的注意力就是犯罪。诚然，他时而也主动与我们简短交谈。 譬如，在做完礼拜回修道小室的途中，他总要送一块圣饼给在修道院广场上值班 的修士。再譬如，一位名叫萨沙·施维佐夫的见习修士不知为何想离开修道院， 谢拉菲姆神父突然来到他面前，跺着脚严肃地喊了一句 :“你是走不出修道院 的!”他自己足不出户地在修道院里生活了六十年，他常说 :“我甚至连想都没 想过要走出修道院。”1945 年，我们的士兵曾把他当作德国人，要枪毙他，但 他们最终改变主意，没有开枪。
-谢拉菲姆神父尽管不爱交往，神情严肃，可总体而言他却是一位无比善良、 充满爱心的人。在修道院，众人均敬重他，爱戴他，虽说带有恐惧，更确切地说 是带有颤栗，一如面对一位能在尘世与上帝同在的人，面对一位活圣徒。
-我还记得当年的见闻。我曾任修道院院长加夫里尔大司祭的助祭，我发现， 当谢拉菲姆神父走入祭坛，院长总是赶忙起身离开院长座位，恭敬地前去相迎。 仅谢拉菲姆一人能获院长如此礼遇。
-无论冬夏，谢拉菲姆神父均在清晨四点准时起床，他走出他的洞穴修道小 室，迅速查看一番修道院，看一切是否正常。然后，他返回修道小室，生起炉 子，由于洞穴十分潮湿，一年四季均需烧炉子。我想，谢拉菲姆神父感觉自己是 洞穴修道院的特殊守护人，他也有可能的确肩负使命。无论如何，每当修道院的 教友们面临最为棘手的问题，这位德国男爵的意见，这位伟大的修士、预知未来 的苦修士的意见，总能发挥决定性作用。
-谢拉菲姆神父很少说出什么特别训诫。他简洁的洞穴修道小室的前厅贴着几 张纸，其上文字摘自圣徒吉洪·扎东斯基的著作，来谢拉菲姆神父修道小室的人 均乐意阅读这些摘录，亦乐意听到谢拉菲姆神父的建议 :“你们要多读一读圣徒 吉洪的书。”
-在修道院的生活中，谢拉菲姆神父始终相当节制，这不仅体现于他的饮食、 睡眠和交往。譬如，他在浴室里从不洗淋浴，仅用水两三瓢。当见习修士们问他为何不冲淋浴，并说水有的是，神父便会嘟囔一句，称洗淋浴就像是吃巧克力。 1983 年的一天，我有机会前往基维耶沃。这机会在当年要比现在更难得， 因为基维耶沃靠近一座不开放的军事城市。基维耶沃的年长修女们送我一小块石 头，它来自一块大石头，圣徒谢拉菲姆·萨罗夫斯基曾坐在那块大石头上祈祷。 回到洞穴修道院后，我决定去见谢拉菲姆神父，把这件与他的精神庇护者相关的
-圣物送给他。
+接过这件突如其来的礼物，谢拉菲姆神父沉默许久，然后才问 : “为这件礼物，我能为您做点什么呢?”
+我因为意外甚至有些慌神儿。 “没什么要做的 ...... ”
+之后我却说出内心最为隐秘的话 : “请您祷告吧，让我能成为一名修士!”
+我记得，谢拉菲姆神父当时十分仔细地看了我一眼。 “要成为修士，”他小声说道，“最首要的还是您自己的意愿。”
+关于剪发做修士的意愿，他很多年后在另一场合再次向我谈起。我当时已在 莫斯科侍奉皮季里姆主教，而谢拉菲姆神父已处于他生命的最后一年，卧病在 床。我来到修道院，去长老的洞穴修道小室看他。突然，他主动谈起修道院，谈 起修士的生活现状。这对于他而言非同寻常，这场谈话因此很宝贵，我仍记得其 中的几个主要思想。
+首先，谢拉菲姆神父怀着难以言表的巨大爱意谈起修道院，将其视为一座最 伟大的宝库 :
+“您甚至难以想象什么叫修道院!这是一颗珍珠，是我们这个世界上最惊人 的宝物!只是要到之后您才会珍重，才能明白。”
+随后，他谈到当今修行生活的一个重要问题 : “我们修道院当今的不幸在于，剪发后来到修道院的人意愿薄弱。”
+如今我越来越意识到这一观点的深刻。旨在建立修行功勋的弃绝自我的牺牲 精神和义无反顾的态度，在我们这里越来越少见。谢拉菲姆神父在修道院年轻修士们身上看到了这一点，并因此而痛心。 最后，他说出了一句对我而言十分重要的话 :
+“大型修道院的时代已一去不返。如今小型修道院将更有效果，其院长能够 关注每位修士的精神生活。请您记住这一点。您将来做了院长，就别容留过多的 教友。”
+这便是我们于 1989 年的最后一次交谈。我当时仅为一名杂役，甚至不是 修士。
+谢拉菲姆神父的先见之明并未令我和我的修道院友人产生任何疑虑。谢拉菲 姆神父本人对于那些言及奇迹和先见之明的话题态度冷静，甚至不乏怀疑。他曾 这般谈及他的导师 :
+“大家都说西梅翁神父是个奇迹创造者，有先见之明。可我和他一起生活了 很久，却没有发现他有任何奇特之处。他就是一位好修士而已。”
+然而，我在自己的命运中却不止一次感受到谢拉菲姆神父的精神禀赋的 力量。
+1986 年夏，我有一次路过长老的修道小室，见他正打算给他门前台阶上 方的顶灯换灯泡。我搬来一个凳子，帮他一下。谢拉菲姆神父向我道谢，然后 又说 :
+“主教要带一位见习修士去莫斯科做事。人们以为他不会待得太久，可他却 留在那儿了。”
+“怎么讲?”我问道。 “就这样!”谢拉菲姆神父说完，便转身走进他的修道小室。
+我迷惑不解地走开。是哪位见习修士呢?又是哪位主教呢? ......
+三天后，修道院院长加夫里尔大司祭把我叫去。他说他今天接到从首都打来 的电话，打电话的是皮季里姆·沃洛科拉姆斯基主教，莫斯科牧首管理局出版部 主席。皮季里姆主教获悉洞穴修道院有位见习修士是电影学院毕业生，便请求修 道院院长将这位见习修士遣往莫斯科。为庆祝罗斯受洗一千年准备拍摄电影胶片和电视节目，因而需要一些专门人才。庆典定于两年后举行。他们言及的见习修 士就是我。我记得，这是我一生中最觉恐怖的一日。我请求加夫里尔神父不要派 我去莫斯科，可他已作出决定 :
+“我可不想因为你去和皮季里姆吵架!”他回答，对我的苦苦哀求置之不理。 后来我才得知，我的母亲试图让我脱离修道院，她早就央求修道院院长放我 返回莫斯科，院长同情她，正在等待一个借口把我送回我孤苦无援的母亲身边。
+严厉的口吻则是他的一贯风格。 自然，我立时想起与谢拉菲姆神父关于见习修士、主教和莫斯科等的最后一
+次交谈，我冲向他的修道小室。 “主的意志啊!别难过。一切都会很好的，您自己之后会看到的，会明白
+的。”长老温和地对我说。 重新生活在莫斯科，尤其开头一段时间，是多么艰难啊!我感觉艰难是因
+为，我在夜间醒来时意识到，那座无与伦比的美妙修道院，以及谢拉菲姆神父、 纳法纳伊尔神父、费奥凡神父、亚历山大神父等等，全都远在数百公里之外，而 我却身在莫斯科，失去了这一切。不友善的纳法纳伊尔神父
+当年，如若有人要问洞穴修道院最不友善的人是谁，那么毫无疑问，他听到 的答案一准是普斯科夫洞穴修道院的司库纳法纳伊尔大司祭。而且，面对这一问 题，无论修士还是见习修士，无论出家人还是俗家人，无论洞穴修道院所在城市 克格勃总局的共产党员还是当地的异见人士，或许均会众口一词。而且，纳法纳 伊尔神父不仅不友善，而且还很不友善。
+在我认识他的时候，他是一位身材瘦削、目光锐利、年岁已高的长老。无论 冬夏，他均身着一件洗得褪色、下摆磨破的旧教袍。他肩上通常搭着一个亚麻布 口袋，里面什么东西都装，有面包干，有某位妇人的施舍，还有大量卢布。这些 东西在司库神父看来都十分珍贵，因为它们都是上帝送给修道院的礼物。所有这 些财产都会被纳法纳伊尔神父分藏进他为数众多的隐秘宿舍和仓库。
+修道院的财务完全归纳法纳伊尔神父掌管。修道院开销很大，因为修道院里 每天都有近四百名香客和上百位修士要坐下来吃饭，要为修道院里无休止的房屋 修缮和新建项目提供保证，此外，教友们的日常生活花销，接济穷人，招待客 人，给官员们送礼 ...... 还有其他很多名目。纳法纳伊尔神父如何能独自一人搞 定所有这些财务问题，无人知晓。而且，他还负责处理修道院的一切公务。此 外，他要编制每日礼拜的程序，担任修道院的秘书，给因各类问题投书修道院的 人写回信。最后，他还要协助院长神父从事一项通常令人不快的交往，即与苏维 埃官方机构打交道。对于任何一位正常人而言，仅把所有这些事务数上一遍便 已头昏脑涨，可纳法纳伊尔神父却做得驾轻就熟、一丝不苟，因此我们有时会猜 测，他不仅是一位教会官员，他体内一定还藏有另一种身份。
+除其他事务外，司库神父还负责监视我们这些见习修士。显而易见，他在履行这一责任时也保持他固有的一丝不苟:他片刻不停地盯着，看着，听着，生怕 我们违反修道院规矩，或给修道院造成危害。当然坦白地说，监视见习修士的确 有必要，我们这些见习修士自俗界进入修道院，均带有某些不良习惯。
+纳法纳伊尔神父还有一种神奇本领，即他总能在最出乎你意料的时刻出现在 你面前。譬如，修道院的青年人会丢下手头活计，躲到古老院墙下的某个隐蔽处 歇息，聊聊天，晒晒太阳，突然之间，纳法纳伊尔神父像是从天而降，他抖动着 胡须训话，他嘶哑的嗓音在这个时刻愈发让人难以承受。于是，见习修士们恨不 得找个地缝钻进去，以便结束这场折磨。
+尽心勉力的纳法纳伊尔神父的确几乎不吃不睡。他是一位不折不扣的禁欲主 义者，譬如，从未有人见他喝茶，他只喝白水。午餐时，他仅食用定量的五分之 一。但每天晚餐时，他却一准前往教友餐厅，其目的仅为在空空如也的餐盘前端 坐，以挑剔的目光监视就餐秩序。
+尽管几乎不吃不睡，他的体能却十分充沛。我们均不知他何时睡觉。即便深 夜，透过护窗板仍可见他修道小室里亮着灯。年老的修士们说，他在修道小室里 要么祷告，要么是在清点当天募集到的大量卢布和硬币。这笔数量巨大的财富他 得整整齐齐扎成捆，零钱则装进小口袋。忙完这一切，他又开始在那架老掉牙的 打字机上敲打明日礼拜的规矩和说明，因为除纳法纳伊尔神父外，无人熟知修道 院礼拜规矩的各种细枝末节。
+即便他修道小室的灯光熄灭，这也绝不意味着我们能暂时脱离他的监视。 不，半夜三更，纳法纳伊尔神父也会随时随地出现，查看是否有人在修道院随意 走动，因为这是绝对禁止的。
+我记得，在一个冬夜，为庆贺天使日，我们在一位教友处呆到很晚，然后才 返回修道小室。突然，在五步开外的暗处，纳法纳伊尔神父突然现身。我们全都 吓傻了。可我们很快便惊讶地发现，司库此次没看见我们。他的动作有些奇怪。 他步履蹒跚，甚至踉踉跄跄，背着他的口袋。之后我们看见，他迈过一处不高的 栅栏，突然倒在雪地上，直接摔进花坛。“他死了!”我们脑中闪过这一念头。 我们稍等片刻，屏住呼吸，小心翼翼地走近他。纳法纳伊尔神父躺在雪地上
+睡觉。他呼吸均匀，甚至发出鼾声。他把口袋枕在脑袋下，还用双手把着。 我们决定留在原地，看看接下来的情况。我们躲在洗礼钟楼后，开始等待。 一个小时后，浑身冻僵的我们终于看见，纳法纳伊尔神父突然精神抖擞地一跃而
+起，他抖一抖身上的雪花，背上口袋，若无其事地走了。 当时我们还毫不知情，只是后来，一些熟知司库的修士才对我们解释，纳法
+纳伊尔神父的确太累，只想舒舒服服地睡一会。舒舒服服，意思就是躺下，因为 他在自己的修道小室里是坐着睡觉的。但为了不在床上安卧太久，他选择在雪地 上小憩。
+不过，与洞穴修道院司库的生活方式相关的一切对我们而言仍然是谜。不友 善的纳法纳伊尔神父不向任何人敞开他隐秘的内心世界，他甚至不让任何人进入 他的修道小室!其中也包括大权在握的院长神父，尽管这会让人感觉不可思议， 院长加夫里尔神父在自己的修道院里居然还有不能进入的禁区。而且，司库的修 道小室并不偏僻，就在院长所住那幢楼的一层，恰在院长居室的楼下。自然，修 道院的主人是难以与这一情形妥协的。
+于是有一天，在节日午餐之后，院长神父心情舒畅，便对纳法纳伊尔神父 说，他这就去纳法纳伊尔神父住处喝茶。
+此时站在他们身边的几位教友立时明白，即将发生一场足以震撼思想、心灵 和一切人类想象的事件。错失目睹这一事件的良机，是不可饶恕的行为。关于那 一事件，当时在场的人留下了这样的描述。
+院长神父沿着修道院的院落，庄严坚定地走向纳法纳伊尔神父的修道小室。 司库迈着小碎步跟在院长身后，大声劝说院长神父放弃自己的念头。他央求院长 去做某些能拯救灵魂的有益事情，而别去闲逛那些谁也不感兴趣的破旧小屋。他 滔滔不绝地描述道，他的修道小室杂乱无章，他已二十六年不曾收拾，他的修道 小室臭气熏天 ...... 最终，已完全绝望的纳法纳伊尔神父甚至近乎威胁，他大声说道，无论如何不能置院长神父的宝贵生命于险境，而司库住处那些乱七八糟的 堆积物就可能对院长神父造成危害。
+“够了，司库神父!”来到修道小室门前的院长打断对方，他已有些生气， “请打开门，让我们看看您这里到底有什么!”
+尽管话中带气，但还是能听出，院长神父的确很好奇。
+最终意识到无路可走，纳法纳伊尔神父不知为何却突然兴奋起来，他精神抖 擞地说了一句每位修士在这种场合都该说的话，即“遵命，院长神父”，然后便 掏出钥匙，为院长打开那扇陈旧的房门，在此前四十年间，这扇门从未完全敞 开，而仅挪开一道能让瘦削的纳法纳伊尔神父挤过身去的细缝 ......
+敞开的房门后面一片漆黑，因为无论白天黑夜，这间秘密修道小室的护窗板 从不打开。纳法纳伊尔神父率先溜进黑暗，转眼便不见踪影，像是跌入黑洞，修 道小室里没有传出任何声响。
+院长神父跟在纳法纳伊尔神父身后，小心翼翼地迈过门槛，他犹犹豫豫地咳 了一声，低声问道 :
+“您这里怎么这么黑啊?不是有电吗?开关在哪儿?”
+“在您右手，院长神父!”漆黑中响起司库热情的声音，“不过要伸手 去够!”
+紧接着，只听院长神父一声惨叫，一股无形的力量将他从司库黑暗的修道小 室推到走廊。在他身后，纳法纳伊尔神父也迅速冲到明处。转眼之间，他已给房 门上锁，然后疾步走向不知所措的院长。司库唏嘘不已，忙着替院长神父整理教 袍，吹去教袍上的灰尘，上气不接下气地解释 :
+“真是不巧。上帝饶恕!这个开关 ...... 您没用惯。64 年就坏了，圣母帡幪节 那天，恰好是赫鲁晓夫下台那天。一个征兆!早晨这个开关掉了，晚上赫鲁晓夫 就下台了!从那天起，我一直没把这个开关装回去。用不着电工，我自己能搞 定。把墙上的两根电线接上，灯就亮了，把它们分开，灯就灭了。但是当然要会 用，是的!但一下学不会，一下学不会! ...... 那么，院长神父，请您恩准，我现在重新把门打开，我们没事的!现在您知道怎么用我的开关了。我屋里有趣的 东西还多的是呢!”
+可未及听完这段胡言乱语，院长便已不见踪影。
+不过，纳法纳伊尔神父却是一位遵守教规的真正典范，他写有称颂院长神父 和普斯科夫洞穴修道院的长篇颂诗，另撰有长达五个印张的教谕布道诗。
+纳法纳伊尔神父的不友善也面向强大的苏维埃国家，尤其在后者肆无忌惮地 干涉修道院生活的时候。据说，当洞穴修道院院长阿里皮大司祭在当局的蛮横逼 迫下感到手足无措时，正是纳法纳伊尔神父向他提供了十分巧妙的建议。
+此事发生在二十世纪六十年代末。众所周知，当时所有苏联公民均必须参加 选举。投票箱被搬进修道院餐厅，午饭后，教友们在院长的监督下胡乱投票，同 时发出不满的抱怨。
+但苏共普斯科夫州委第一书记不知为何获悉，那些“不学无术”的修士们获 得了不合理的优待，他们投票赞成共产党人和无党派人士牢不可破的联盟，可他 们却不去选举点，而躲在他们住了一辈子的修道院里选举。第一书记生气了，他 严厉斥责部下对非劳动阶级分子的放任，并立时出台了一项规定，从今往后，在 举行苏联最高苏维埃选举时，修士们必须像所有苏联人那样前往居住地的投票点 投票。
+据说就在此时，纳法纳伊尔神父对院长阿里皮神父小声耳语，道出了那个非 常巧妙的建议。
+到了选举日(是个礼拜天)，在修道院做完礼拜后，一个庄重的十字架游行 队伍走出修道院。
+修士们两人一排，组成长长的队伍，整齐地唱着祭祷歌，穿过整座城市走向 投票点。神幡在他们头顶飘扬，队伍前面照例举着十字架和古老的圣像画。不仅 如此。如同在每件重大事情开始之前应该做的那样，修士们在选举厅里开始祷 告。吓得要死的官员们企图制止，可阿里皮神父打断他们的话，要对方不要妨碍 公民履行宪法赋予他们的义务。投完票，教友们又整整齐齐地以十字架游行的方式返回修道院。 没有必要解释，在后来进行选举时，投票箱一大早便又在修道院餐厅恭候修
+士们了。 与此同时，严格监视我们的纳法纳伊尔神父却始终禁止任何针对国家的公开
+的反对派立场，更遑论持不同政见行为。起初我们以为，司库是在拍当局马屁。 可后来我们逐渐意识到，纳法纳伊尔神父不止一次与派至修道院的内奸或乔装打 扮的暗探发生冲突。即便在完全确信周围均为实在人时，纳法纳伊尔神父依然总 是制止我们发表我们钟爱的自由言论。他这样做，并不仅仅是为了保护修道院， 而更像是为了保护我们，防止年轻气盛的我们做出不理智的荒唐举动。他鄙视空 话，即便是那些最具英雄主义气概的话，他对苏维埃政权以及国家发生的一切了 如指掌，不似我们这些人，我们的讯息大多是道听途说，且主要凭借书本。纳法 纳伊尔神父对苏维埃政权持有非常个性化的清醒态度。这或许因为，他的父亲、 神父尼古拉·波斯佩洛夫在一九三七年因为自己的信仰而被枪杀。纳法纳伊尔神 父当兵上战场，战后成为院长阿里皮大司祭的助手，成为洞穴修道院圣徒长老、 奇迹创造者西梅翁修士的教子。他们两人见他心地纯洁，思维敏捷，便让他在 赫鲁晓夫迫害教会最甚时期担任修道院司库和秘书，将修道院最秘密的事务托付 于他。
+再回到苏维埃政权的问题上来。一个夏夜，我在圣母安息节教堂前的广场 上值班。星辰在北方的天空上闪烁微光。四周一片静谧。钟楼上的钟敲了三 下 ...... 突然，我觉得身后站着一个人。我恐惧地转过身。是纳法纳伊尔神父。 他若有所思地看着星空，然后问道 :
+“格奥尔基，你怎么看待共产主义的基本原则?” 普斯科夫洞穴修道院。圣母安息节教堂广场。1983 年。半夜三点。星
+辰...... 没听到我的回答，纳法纳伊尔神父依然若有所思地说 :
+“共产主义的基本原则就是‘各尽所能，各取所需’。可是这‘所能’和‘所需’永远需要由一个委员会来决定。什么委员会呢? ...... 通常就是‘三人 小组’!他们会把我叫过去，对我说:‘瞧，纳法纳伊尔，你有什么才能呢?你 一天能锯二十方木材吗?你有什么需求呢?一碗豆粥! ...... 这就是那个基本原 则......”
+尽管纳法纳伊尔神父总是竭力强调他只是一名干巴巴的迂腐管事者，可是即 便我们这些见习修士也逐渐猜透，他不过在小心翼翼地掩饰他的精神禀赋。不 过，修道院里真正的修士均如此行事。司库神父并非修道院里正式负责听取忏悔 的神父。前来向他忏悔的仅有几名洞穴城的老住户和某些远方来客。他不愿做其 他人的忏悔神父，推说自己不善此事。
+可有一次，他在一瞬之间袒露了他心灵中的隐秘部分，虽说他立时便又躲回 了惯常的严厉和偏执。我在做事时犯了错，好像是对交办的事情漫不经心。为 此，院长神父罚我一连三天清扫圣母安息节教堂广场的积雪。
 
 
 </div>
