--- a/index.html
+++ b/index.html
@@ -433,7 +433,408 @@
 游，近日之倪云林、唐伯虎、祝枝山，再如李龟年，黄幡绰，敬新磨，卓文君，红
 拂，薛涛，崔莺，朝云之流，此皆易地则同之人也。”
 子兴道：“依你说，‘成则王侯败则贼’了。”雨村道：“正是这意。你还不知，
-
+我自革职以来，这两年遍游各省，也曾遇见两个异样孩子。所以，方才你一说这宝
+玉，我就猜着了八九亦是这一派人物。不用远说，只金陵城内，钦差金陵省体仁院
+总裁甄家，你可知么？”子兴道：“谁人不知！这甄府和贾府就是老亲，又系世交
+。两家来往，极其亲热的。便在下也和他家来往非止一日了。”
+雨村笑道：“去岁我在金陵，也曾有人荐我到甄府处馆。我进去看其光景，谁知他
+家那等显贵，却是个富而好礼之家，倒是个难得之馆。但这一个学生，虽是启蒙，
+却比一个举业的还劳神。说起来更可笑，他说：‘必得两个女儿伴着我读书，我方
+能认得字，心里也明白，不然我自己心里糊涂。’又常对跟他的小厮们说：‘这女
+儿两个字，极尊贵，极清净的，比那阿弥陀佛，元始天尊的这两个宝号还更尊荣无
+对的呢！你们这浊口臭舌，万不可唐突了这两个字，要紧。但凡要说时，必须先用
+清水香茶漱了口才可，设若失错，便要凿牙穿腮等事。’其暴虐浮躁，顽劣憨痴，
+种种异常。只一放了学，进去见了那些女儿们，其温厚和平，聪敏文雅，竟又变了
+一个。因此，他令尊也曾下死笞楚过几次，无奈竟不能改。每打的吃疼不过时，他
+便‘姐姐’‘妹妹’乱叫起来。后来听得里面女儿们拿他取笑：‘因何打急了只管
+叫姐妹做甚？莫不是求姐妹去说情讨饶？你岂不愧些！’他回答的最妙。他说：‘
+急疼之时，只叫‘姐姐’妹妹’字样，或可解疼也未可知，因叫了一声，便果觉不
+疼了，遂得了秘法：每疼痛之极，便连叫姐妹起来了。’你说可笑不可笑？也因祖
+母溺爱不明，每因孙辱师责子，因此我就辞了馆出来。如今在这巡盐御史林家做馆
+了。你看，这等子弟，必不能守祖父之根基，从师长之规谏的。只可惜他家几个姊
+妹都是少有的。”
+子兴道：“便是贾府中，现有的三个也不错。政老爹的长女，名元春，现因贤孝才
+德，选入宫作女史去了。二小姐乃赦老爹之妾所出，名迎春；三小姐乃政老爹之庶
+出，名探春；四小姐乃宁府珍爷之胞妹，名唤惜春。因史老夫人极爱孙女，都跟在
+祖母这边一处读书，听得个个不错。”雨村道：“更妙在甄家的风俗，女儿之名，
+亦皆从男子之名命字，不似别家另外用这些‘春’‘红’‘香’‘玉’等艳字的。
+何得贾府亦乐此俗套？”子兴道：“不然。只因现今大小姐是正月初一日所生，故
+名元春，余者方从了‘春’字。上一辈的，却也是从兄弟而来的。现有对证：目今
+你贵东家林公之夫人，即荣府中赦，政二公之胞妹，在家时名唤贾敏。不信时，你
+回去细访可知。”雨村拍案笑道：“怪道这女学生读至凡书中有‘敏’字，皆念作
+‘密’字，每每如是，写字遇着‘敏’字，又减一二笔，我心中就有些疑惑。今听
+你说的，是为此无疑矣。怪道我这女学生言语举止另是一样，不与近日女子相同，
+度其母必不凡，方得其女，今知为荣府之孙，又不足罕矣，可伤上月竟亡故了。”
+子兴叹道：“老姊妹四个，这一个是极小的，又没了。长一辈的姊妹，一个也没了
+。只看这小一辈的，将来之东床如何呢？”
+雨村道：“正是。方才说这政公，已有衔玉之儿，又有长子所遗一个弱孙。这赦老
+竟无一个不成？”子兴道：“政公既有玉儿之后，其妾又生了一个，倒不知其好歹
+。只眼前现有二子一孙，却不知将来如何。若问那赦公，也有二子，长名贾琏，今
+已二十来往了，亲上作亲，娶的就是政老爹夫人王氏之内侄女，今已娶了二年。这
+位琏爷身上现捐的是个同知，也是不肯读书，于世路上好机变，言谈去的，所以如
+今只在乃叔政老爷家住着，帮着料理些家务。谁知自娶了他令夫人之后，倒上下无
+一人不称颂他夫人的，琏爷倒退了一射之地：说模样又极标致，言谈又爽利，心机
+又极深细，竟是个男人万不及一的。”
+雨村听了，笑道：“可知我前言不谬。你我方才所说的这几个人，都只怕是那正邪
+两赋而来一路之人，未可知也。”子兴道：“邪也罢，正也罢，只顾算别人家的帐
+，你也吃一杯酒才好。”雨村道：“正是，只顾说话，竟多吃了几杯。”子兴笑道
+：“说着别人家的闲话，正好下酒，即多吃几杯何妨。”雨村向窗外看道：“天也
+晚了，仔细关了城。我们慢慢的进城再谈，未为不可。”于是，二人起身，算还酒
+帐。方欲走时，又听得后面有人叫道：“雨村兄，恭喜了！特来报个喜信的。”雨
+村忙回头看时----
+第三回
+贾雨村夤缘复旧职 林黛玉抛父进京都
+却说雨村忙回头看时，不是别人，乃是当日同僚一案参革的
+号张如圭者。他本系此地人，革后家居，今打听得都中奏准起复旧员之信，他便四
+下里寻情找门路，忽遇见雨村，故忙道喜。二人见了礼，张如圭便将此信告诉雨村
+，雨村自是欢喜，忙忙的叙了两句，遂作别各自回家。冷子兴听得此言，便忙献计
+，令雨村央烦林如海，转向都中去央烦贾政。雨村领其意，作别回至馆中，忙寻邸
+报看真确了。
+次日，面谋之如海。如海道：“天缘凑巧，因贱荆去世，都中家岳母念及小女无人
+依傍教育，前已遣了男女船只来接，因小女未曾大痊，故未及行。此刻正思向蒙训
+教之恩未经酬报，遇此机会，岂有不尽心图报之理。但请放心。弟已预为筹画至此
+，已修下荐书一封，转托内兄务为周全协佐，方可稍尽弟之鄙诚，即有所费用之例
+，弟于内兄信中已注明白，亦不劳尊兄多虑矣。”雨村一面打恭，谢不释口，一面
+又问：“不知令亲大人现居何职？只怕晚生草率，不敢骤然入都干渎。”如海笑道
+：“若论舍亲，与尊兄犹系同谱，乃荣公之孙：大内兄现袭一等将军，名赦，字恩
+侯，二内兄名政，字存周，现任工部员外郎，其为人谦恭厚道，大有祖父遗风，非
+膏粱轻薄仕宦之流，故弟方致书烦托。否则不但有污尊兄之清操，即弟亦不屑为矣
+。”雨村听了，心下方信了昨日子兴之言，于是又谢了林如海。如海乃说：“已择
+了出月初二日小女入都，尊兄即同路而往，岂不两便？”雨村唯唯听命，心中十分
+得意。如海遂打点礼物并饯行之事，雨村一一领了。
+那女学生黛玉，身体方愈，原不忍弃父而往，无奈他外祖母致意务去，且兼如海说
+：“汝父年将半百，再无续室之意，且汝多病，年又极小，上无亲母教养，下无姊
+妹兄弟扶持，今依傍外祖母及舅氏姊妹去，正好减我顾盼之忧，何反云不往？”黛
+玉听了，方洒泪拜别，随了奶娘及荣府几个老妇人登舟而去。雨村另有一只船，带
+两个小童，依附黛玉而行。
+有日到了都中，进入神京，雨村先整了衣冠，带了小童，拿着宗侄的名帖，至荣府
+的门前投了。彼时贾政已看了妹丈之书，即忙请入相会。见雨村相貌魁伟，言语不
+俗，且这贾政最喜读书人，礼贤下士，济弱扶危，大有祖风；况又系妹丈致意，因
+此优待雨村，更又不同，便竭力内中协助，题奏之日，轻轻谋了一个复职候缺，不
+上两个月，金陵应天府缺出，便谋补了此缺，拜辞了贾政，择日上任去了。不在话
+下。
+且说黛玉自那日弃舟登岸时，便有荣国府打发了轿子并拉行李的车辆久候了。这林
+黛玉常听得母亲说过，他外祖母家与别家不同。他近日所见的这几个三等仆妇，吃
+穿用度，已是不凡了，何况今至其家。因此步步留心，时时在意，不肯轻易多说一
+句话，多行一步路，惟恐被人耻笑了他去。自上了轿，进入城中从纱窗向外瞧了一
+瞧，其街市之繁华，人烟之阜盛，自与别处不同。又行了半日，忽见街北蹲着两个
+大石狮子，三间兽头大门，门前列坐着十来个华冠丽服之人。正门却不开，只有东
+西两角门有人出入。正门之上有一匾，匾上大书“敕造宁国府”五个大字。黛玉想
+道：这必是外祖之长房了。想着，又往西行，不多远，照样也是三间大门，方是荣
+国府了。却不进正门，只进了西边角门。那轿夫抬进去，走了一射之地，将转弯时
+，便歇下退出去了。后面的婆子们已都下了轿，赶上前来。另换了三四个衣帽周全
+十七八岁的小厮上来，复抬起轿子。众婆子步下围随至一垂花门前落下。众小厮退
+出，众婆子上来打起轿帘，扶黛玉下轿。林黛玉扶着婆子的手，进了垂花门，两边
+是抄手游廊，当中是穿堂，当地放着一个紫檀架子大理石的大插屏。转过插屏，小
+小的三间厅，厅后就是后面的正房大院。正面五间上房，皆雕梁画栋，两边穿山游
+廊厢房，挂着各色鹦鹉，画眉等鸟雀。台矶之上，坐着几个穿红着绿的丫头，一见
+他们来了，便忙都笑迎上来，说：“刚才老太太还念呢，可巧就来了。”于是三四
+人争着打起帘笼，一面听得人回话：“林姑娘到了。”
+黛玉方进入房时，只见两个人搀着一位鬓发如银的老母迎上来，黛玉便知是他外祖
+母。方欲拜见时，早被他外祖母一把搂入怀中，心肝儿肉叫着大哭起来。当下地下
+侍立之人，无不掩面涕泣，黛玉也哭个不住。一时众人慢慢解劝住了，黛玉方拜见
+了外祖母。－－此即冷子兴所云之史氏太君，贾赦贾政之母也。当下贾母一一指与
+黛玉：“这是你大舅母，这是你二舅母，这是你先珠大哥的媳妇珠大嫂子。”黛玉
+一一拜见过。贾母又说：“请姑娘们来。今日远客才来，可以不必上学去了。”众
+人答应了一声，便去了两个。
+不一时，只见三个奶嬷嬷并五六个丫鬟，簇拥着三个姊妹来了。第一个肌肤微丰，
+合中身材，腮凝新荔，鼻腻鹅脂，温柔沉默，观之可亲。第二个削肩细腰，长挑身
+材，鸭蛋脸面，俊眼修眉，顾盼神飞，文彩精华，见之忘俗。第三个身量未足，形
+容尚小。其钗环裙袄，三人皆是一样的妆饰。黛玉忙起身迎上来见礼，互相厮认过
+，大家归了坐。丫鬟们斟上茶来。不过说些黛玉之母如何得病，如何请医服药，如
+何送死发丧。不免贾母又伤感起来，因说：“我这些儿女，所疼者独有你母，今日
+一旦先舍我而去，连面也不能一见，今见了你，我怎不伤心！”说着，搂了黛玉在
+怀，又呜咽起来。众人忙都宽慰解释，方略略止住。
+众人见黛玉年貌虽小，其举止言谈不俗，身体面庞虽怯弱不胜，却有一段自然的风
+流态度，便知他有不足之症。因问：“常服何药，如何不急为疗治？”黛玉道：“
+我自来是如此，从会吃饮食时便吃药，到今日未断，请了多少名医修方配药，皆不
+见效。那一年我三岁时，听得说来了一个癞头和尚，说要化我去出家，我父母固是
+不从。他又说：既舍不得他，只怕他的病一生也不能好的了。若要好时，除非从此
+以后总不许见哭声，除父母之外，凡有外姓亲友之人，一概不见，方可平安了此一
+世。’疯疯癫癫，说了这些不经之谈，也没人理他。如今还是吃人参养荣丸。”贾
+母道：“正好，我这里正配丸药呢。叫他们多配一料就是了。
+一语未了，只听后院中有人笑声，说：“我来迟了，不曾迎接远客！”黛玉纳罕道
+：“这些人个个皆敛声屏气，恭肃严整如此，这来者系谁，这样放诞无礼？”心下
+想时，只见一群媳妇丫鬟围拥着一个人从后房门进来。这个人打扮与众姑娘不同，
+彩绣辉煌，恍若神妃仙子：头上戴着金丝八宝攒珠髻，绾着朝阳五凤挂珠钗，项上
+戴着赤金盘螭璎珞圈，裙边系着豆绿宫绦、双衡比目玫瑰佩，身上穿着缕金百蝶穿
+花大红洋缎窄褃袄，外罩五彩刻丝石青银鼠褂，下着翡翠撒花洋绉裙。一双丹凤三
+角眼，两弯柳叶吊梢眉，身量苗条，体格风骚，粉面含春威不露，丹唇未启笑先闻
+。黛玉连忙起身接见。贾母笑道：“你不认得他，他是我们这里有名的一个泼皮破
+落户儿，南省俗谓作‘辣子’，你只叫他‘凤辣子’就是了。”黛玉正不知以何称
+呼，只见众姊妹都忙告诉他道：“这是琏嫂子。”黛玉虽不识，也曾听见母亲说过
+，大舅贾赦之子贾琏，娶的就是二舅母王氏之内侄女，自幼假充男儿教养的，学名
+王熙凤。黛玉忙陪笑见礼，以“嫂”呼之。这熙凤携着黛玉的手，上下细细打谅了
+一回，仍送至贾母身边坐下，因笑道：“天下真有这样标致的人物，我今儿才算见
+了！况且这通身的气派，竟不像老祖宗的外孙女儿，竟是个嫡亲的孙女，怨不得老
+祖宗天天口头心头一时不忘。只可怜我这妹妹这样命苦，怎么姑妈偏就去世了！”
+说着，便用帕拭泪。贾母笑道：“我才好了，你倒来招我。你妹妹远路才来，身子
+又弱，也才劝住了，快再休提前话。”这熙凤听了，忙转悲为喜道：“正是呢！我
+一见了妹妹，一心都在他身上了，又是喜欢，又是伤心，竟忘记了老祖宗。该打，
+该打！”又忙携黛玉之手，问：“妹妹几岁了？可也上过学？现吃什么药？在这里
+不要想家，想要什么吃的，什么玩的，只管告诉我，丫头老婆们不好了，也只管告
+诉我。”一面又问婆子们：“林姑娘的行李东西可搬进来了？带了几个人来？你们
+赶早打扫两间下房，让他们去歇歇。”
+说话时，已摆了茶果上来。熙凤亲为捧茶捧果。又见二舅母问他：“月钱放过了不
+曾？”熙凤道：“月钱已放完了。才刚带着人到后楼上找缎子，找了这半日，也并
+没有见昨日太太说的那样的，想是太太记错了？”王夫人道：“有没有，什么要紧
+。”因又说道：“该随手拿出两个来给你这妹妹去裁衣裳的，等晚上想着叫人再去
+拿罢，可别忘了。”熙凤道：“这倒是我先料着了，知道妹妹不过这两日到的，我
+已预备下了，等太太回去过了目好送来。”王夫人一笑，点头不语。
+当下茶果已撤，贾母命两个老嬷嬷带了黛玉去见两个母舅。时贾赦之妻邢氏忙亦起
+身，笑回道：“我带了外甥女过去，倒也便宜。”贾母笑道：“正是呢，你也去罢
+，不必过来了。”邢夫人答应了一声“是”字，遂带了黛玉与王夫人作辞，大家送
+至穿堂前。出了垂花门，早有众小厮们拉过一辆翠幄青车，邢夫人携了黛玉，坐
+在上面，众婆子们放下车帘，方命小厮们抬起，拉至宽处，方驾上驯骡，亦出了西
+角门，往东过荣府正门，便入一黑油大门中，至仪门前方下来。众小厮退出，方打
+起车帘，邢夫人搀着黛玉的手，进入院中。黛玉度其房屋院宇，必是荣府中花园隔
+断过来的。进入三层仪门，果见正房厢庑游廊，悉皆小巧别致，不似方才那边轩峻
+壮丽，且院中随处之树木山石皆在。一时进入正室，早有许多盛妆丽服之姬妾丫鬟
+迎着，邢夫人让黛玉坐了，一面命人到外面书房去请贾赦。一时人来回话说：“老
+爷说了：连日身上不好，见了姑娘彼此倒伤心，暂且不忍相见。劝姑娘不要伤心想
+家，跟着老太太和舅母，即同家里一样。姊妹们虽拙，大家一处伴着，亦可以解些
+烦闷。或有委屈之处，只管说得，不要外道才是。’”黛玉忙站起来，一一听了。
+再坐一刻，便告辞。邢夫人苦留吃过晚饭去，黛玉笑回道：“舅母爱惜赐饭，原不
+应辞，只是还要过去拜见二舅舅，恐领了赐去不恭，异日再领，未为不可。望舅母
+容谅。”邢夫人听说，笑道：“这倒是了。”遂令两三个嬷嬷用方才的车好生送了
+姑娘过去，于是黛玉告辞。邢夫人送至仪门前，又嘱咐了众人几句，眼看着车去了
+方回来。
+一时黛玉进了荣府，下了车。众嬷嬷引着，便往东转弯，穿过一个东西的穿堂，向
+南大厅之后，仪门内大院落，上面五间大正房，两边厢房鹿顶耳房钻山，四通八达
+，轩昂壮丽，比贾母处不同。黛玉便知这方是正经正内室，一条大甬路，直接出大
+门的。进入堂屋中，抬头迎面先看见一个赤金九龙青地大匾，匾上写着斗大的三个
+大字，是“荣禧堂”，后有一行小字：“某年月日，书赐荣国公贾源”，又有“万
+几宸翰之宝”。大紫檀雕螭案上，设着三尺来高青绿古铜鼎，悬着待漏随朝墨龙大
+画，一边是金蜼ы彝，一边是玻璃{台皿}。地下两溜十六张楠木交椅，又有一副对
+联，乃乌木联牌，镶着錾银的字迹，道是：
+座上珠玑昭日月，堂前黼黻焕烟霞。下面一行小字，道是：“同乡世教弟勋袭东安
+郡王穆莳拜手书”。
+原来王夫人时常居坐宴息，亦不在这正室，只在这正室东边的三间耳房内。于是老
+嬷嬷引黛玉进东房门来。临窗大炕上铺着猩红洋罽，正面设着大红金钱蟒靠背，石
+青金钱蟒引枕，秋香色金钱蟒大条褥。两边设一对梅花式洋漆小几。左边几上文王
+鼎匙箸香盒，右边几上汝窑美人觚－－觚内插着时鲜花卉，并茗碗痰盒等物。地下
+面西一溜四张椅上，都搭着银红撒花椅搭，底下四副脚踏。椅之两边，也有一对高
+几，几上茗碗瓶花俱备。其余陈设，自不必细说。老嬷嬷们让黛玉炕上坐，炕沿上
+却有两个锦褥对设，黛玉度其位次，便不上炕，只向东边椅子上坐了。本房内的丫
+鬟忙捧上茶来。黛玉一面吃茶，一面打谅这些丫鬟们，妆饰衣裙，举止行动，果亦
+与别家不同。
+茶未吃了，只见一个穿红绫袄青缎掐牙背心的丫鬟走来笑说道：“太太说，请林姑
+娘到那边坐罢。”老嬷嬷听了，于是又引黛玉出来，到了东廊三间小正房内。正房
+炕上横设一张炕桌，桌上磊着书籍茶具，靠东壁面西设着半旧的青缎靠背引枕。王
+夫人却坐在西边下首，亦是半旧的青缎靠背坐褥。见黛玉来了，便往东让。黛玉心
+中料定这是贾政之位。因见挨炕一溜三张椅子上，也搭着半旧的弹墨椅袱，黛玉便
+向椅上坐了。王夫人再四携他上炕，他方挨王夫人坐了。王夫人因说：“你舅舅今
+日斋戒去了，再见罢。只是有一句话嘱咐你：你三个姊妹倒都极好，以后一处念书
+认字学针线，或是偶一顽笑，都有尽让的。但我不放心的最是一件：我有一个孽根
+祸胎，是家里的‘混世魔王’，今日因庙里还愿去了，尚未回来，晚间你看见便知
+了。你只以后不要睬他，你这些姊妹都不敢沾惹他的。”
+黛玉亦常听得母亲说过，二舅母生的有个表兄，乃衔玉而诞，顽劣异常，极恶读书
+，最喜在内帏厮混，外祖母又极溺爱，无人敢管。今见王夫人如此说，便知说的是
+这表兄了。因陪笑道：“舅母说的，可是衔玉所生的这位哥哥？在家时亦曾听见母
+亲常说，这位哥哥比我大一岁，小名就唤宝玉，虽极憨顽，说在姊妹情中极好的。
+况我来了，自然只和姊妹同处，兄弟们自是别院另室的，岂得去沾惹之理？”王夫
+人笑道：“你不知道原故：他与别人不同，自幼因老太太疼爱，原系同姊妹们一处
+娇养惯了的。若姊妹们有日不理他，他倒还安静些，纵然他没趣，不过出了二门，
+背地里拿着他两个小幺儿出气，咕唧一会子就完了。若这一日姊妹们和他多说一句
+话，他心里一乐，便生出多少事来。所以嘱咐你别睬他。他嘴里一时甜言蜜语，一
+时有天无日，一时又疯疯傻傻，只休信他。”
+黛玉一一的都答应着。只见一个丫鬟来回：“老太太那里传晚饭了。”王夫人忙携
+黛玉从后房门由后廊往西，出了角门，是一条南北宽夹道。南边是倒座三间小小的
+抱厦厅，北边立着一个粉油大影壁，后有一半大门，小小一所房室。王夫人笑指向
+黛玉道：“这是你凤姐姐的屋子，回来你好往这里找他来，少什么东西，你只管和
+他说就是了。”这院门上也有四五个才总角的小厮，都垂手侍立。王夫人遂携黛玉
+穿过一个东西穿堂，便是贾母的后院了。于是，进入后房门，已有多人在此伺候，
+见王夫人来了，方安设桌椅。贾珠之妻李氏捧饭，熙凤安箸，王夫人进羹。贾母正
+面榻上独坐，两边四张空椅，熙凤忙拉了黛玉在左边第一张椅上坐了，黛玉十分推
+让。贾母笑道：“你舅母你嫂子们不在这里吃饭。你是客，原应如此坐的。”黛玉
+方告了座，坐了。贾母命王夫人坐了。迎春姊妹三个告了座方上来。迎春便坐右手
+第一，探春左第二，惜春右第二。旁边丫鬟执着拂尘，漱盂，巾帕。李，凤二人立
+于案旁布让。外间伺候之媳妇丫鬟虽多，却连一声咳嗽不闻。寂然饭毕，各有丫鬟
+用小茶盘捧上茶来。当日林如海教女以惜福养身，云饭后务待饭粒咽尽，过一时再
+吃茶，方不伤脾胃。今黛玉见了这里许多事情不合家中之式，不得不随的，少不得
+一一改过来，因而接了茶。早见人又捧过漱盂来，黛玉也照样漱了口。盥手毕，又
+捧上茶来，这方是吃的茶。贾母便说：“你们去罢，让我们自在说话儿。”王夫人
+听了，忙起身，又说了两句闲话，方引凤，李二人去了。贾母因问黛玉念何书。黛
+玉道：“只刚念了《四书》。”黛玉又问姊妹们读何书。贾母道：“读的是什么书
+，不过是认得两个字，不是睁眼的瞎子罢了！”
+一语未了，只听外面一阵脚步响，丫鬟进来笑道：“宝玉来了！”黛玉心中正疑惑
+着：“这个宝玉，不知是怎生个惫{赖心}人物，懵懂顽童？－－倒不见那蠢物也罢
+了。心中想着，忽见丫鬟话未报完，已进来了一位年轻的公子：头上戴着束发嵌宝
+紫金冠，齐眉勒着二龙抢珠金抹额，穿一件二色金百蝶穿花大红箭袖，束着五彩丝
+攒花结长穗宫绦，外罩石青起花八团倭锻排穗褂，登着青缎粉底小朝靴。面若中秋
+之月，色如春晓之花，鬓若刀裁，眉如墨画，面如桃瓣，目若秋波。虽怒时而若笑
+，即瞋视而有情。项上金螭璎珞，又有一根五色丝绦，系着一块美玉。黛玉一见，
+便吃一大惊，心下想道：“好生奇怪，倒像在那里见过一般，何等眼熟到如此！”
+只见这宝玉向贾母请了安，贾母便命：“去见你娘来。”宝玉即转身去了。一时回
+来，再看，已换了冠带：头上周围一转的短发，都结成小辫，红丝结束，共攒至顶
+中胎发，总编一根大辫，黑亮如漆，从顶至梢，一串四颗大珠，用金八宝坠角，身
+上穿着银红撒花半旧大袄，仍旧带着项圈，宝玉，寄名锁，护身符等物，下面半露
+松花撒花绫裤腿，锦边弹墨袜，厚底大红鞋。越显得面如敷粉，唇若施脂，转盼多
+情，语言常笑。天然一段风骚，全在眉梢；平生万种情思，悉堆眼角。看其外貌最
+是极好，却难知其底细。后人有《西江月》二词，批宝玉极恰，其词曰：
+无故寻愁觅恨，有时似傻如狂。纵然生得好皮囊，腹内原来草莽。
+潦倒不通世务，愚顽怕读文章。行为偏僻性乖张，那管世人诽谤！
+富贵不知乐业，贫穷难耐凄凉。可怜辜负好韶光，于国于家无望。
+天下无能第一，古今不肖无双。寄言纨绔与膏粱：莫效此儿形状！
+贾母因笑道：“外客未见，就脱了衣裳，还不去见你妹妹！”宝玉早已看见多了一
+个姊妹，便料定是林姑妈之女，忙来作揖。厮见毕归坐，细看形容，与众各别：两
+弯似蹙非蹙罥烟眉，一双似喜非喜含情目。态生两靥之愁，娇袭一身之病。泪光点
+点，娇喘微微。闲静时如姣花照水，行动处似弱柳扶风。心较比干多一窍，病如西
+子胜三分。宝玉看罢，因笑道：“这个妹妹我曾见过的。”贾母笑道：“可又是胡
+说，你又何曾见过他？”宝玉笑道：“虽然未曾见过他，然我看着面善，心里就算
+是旧相识，今日只作远别重逢，亦未为不可。”贾母笑道：“更好，更好，若如此
+，更相和睦了。”宝玉便走近黛玉身边坐下，又细细打量一番，因问：“妹妹可曾
+读书？”黛玉道：“不曾读，只上了一年学，些须认得几个字。”宝玉又道：“妹
+妹尊名是那两个字？”黛玉便说了名。宝玉又问表字。黛玉道：“无字。”宝玉笑
+道：“我送妹妹一妙字，莫若‘颦颦’二字极妙。”探春便问何出。宝玉道：“《
+古今人物通考》上说：‘西方有石名黛，可代画眉之墨。’况这林妹妹眉尖若蹙，
+用取这两个字，岂不两妙！”探春笑道：“只恐又是你的杜撰。”宝玉笑道：“除
+《四书》外，杜撰的太多，偏只我是杜撰不成？”又问黛玉：“可也有玉没有？”
+众人不解其语，黛玉便忖度着因他有玉，故问我有也无，因答道：“我没有那个。
+想来那玉是一件罕物，岂能人人有的。”宝玉听了，登时发作起痴狂病来，摘下那
+玉，就狠命摔去，骂道：“什么罕物，连人之高低不择，还说‘通灵’不‘通灵’
+呢！我也不要这劳什子了！”吓的众人一拥争去拾玉。贾母急的搂了宝玉道：“孽
+障！你生气，要打骂人容易，何苦摔那命根子！”宝玉满面泪痕泣道：“家里姐姐
+妹妹都没有，单我有，我说没趣，如今来了这们一个神仙似的妹妹也没有，可知这
+不是个好东西。”贾母忙哄他道：“你这妹妹原有这个来的，因你姑妈去世时，舍
+不得你妹妹，无法处，遂将他的玉带了去了：一则全殉葬之礼，尽你妹妹之孝心；
+二则你姑妈之灵，亦可权作见了女儿之意。因此他只说没有这个，不便自己夸张之
+意。你如今怎比得他？还不好生慎重带上，仔细你娘知道了。”说着，便向丫鬟手
+中接来，亲与他带上。宝玉听如此说，想一想大有情理，也就不生别论了。
+当下，奶娘来请问黛玉之房舍。贾母说：“今将宝玉挪出来，同我在套间暖阁儿里
+，把你林姑娘暂安置碧纱橱里。等过了残冬，春天再与他们收拾房屋，另作一番安
+置罢。”宝玉道：“好祖宗，我就在碧纱橱外的床上很妥当，何必又出来闹的老祖
+宗不得安静。”贾母想了一想说：“也罢了。”每人一个奶娘并一个丫头照管，余
+者在外间上夜听唤。一面早有熙凤命人送了一顶藕合色花帐，并几件锦被缎褥之类
+。
+黛玉只带了两个人来：一个是自幼奶娘王嬷嬷，一个是十岁的小丫头，亦是自幼随
+身的，名唤作雪雁。贾母见雪雁甚小，一团孩气，王嬷嬷又极老，料黛玉皆不遂心
+省力的，便将自己身边的一个二等丫头，名唤鹦哥者与了黛玉。外亦如迎春等例，
+每人除自幼乳母外，另有四个教引嬷嬷，除贴身掌管钗钏褕沐两个丫鬟外，另有五
+六个洒扫房屋来往使役的小丫鬟。当下，王嬷嬷与鹦哥陪侍黛玉在碧纱橱内。宝玉
+之乳母李嬷嬷，并大丫鬟名唤袭人者，陪侍在外面大床上。
+原来这袭人亦是贾母之婢，本名珍珠。贾母因溺爱宝玉，生恐宝玉之婢无竭力尽忠
+之人，素喜袭人心地纯良，克尽职任，遂与了宝玉。宝玉因知他本姓花，又曾见旧
+人诗句上有“花气袭人”之句，遂回明贾母，更名袭人。这袭人亦有些痴处：服侍
+贾母时，心中眼中只有一个贾母；今与了宝玉，心中眼中又只有一个宝玉。只因宝
+玉性情乖僻，每每规谏宝玉，心中着实忧郁。
+是晚，宝玉李嬷嬷已睡了，他见里面黛玉和鹦哥犹未安息，他自卸了妆，悄悄进来
+，笑问：“姑娘怎么还不安息？”黛玉忙让：“姐姐请坐。”袭人在床沿上坐了。
+鹦哥笑道：“林姑娘正在这里伤心，自己淌眼抹泪的说：‘今儿才来，就惹出你家
+哥儿的狂病，倘或摔坏了那玉，岂不是因我之过！’因此便伤心，我好容易劝好了
+。”袭人道：“姑娘快休如此，将来只怕比这个更奇怪的笑话儿还有呢！若为他这
+种行止，你多心伤感，只怕你伤感不了呢。快别多心！”黛玉道：“姐姐们说的，
+我记着就是了。究竟那玉不知是怎么个来历？上面还有字迹？”袭人道：“连一家
+子也不知来历，上头还有现成的眼儿，听得说，落草时是从他口里掏出来的。等我
+拿来你看便知。”黛玉忙止道：“罢了，此刻夜深，明日再看也不迟。”大家又叙
+了一回，方才安歇。
+次日起来，省过贾母，因往王夫人处来，正值王夫人与熙凤在一处拆金陵来的书信
+看，又有王夫人之兄嫂处遣了两个媳妇来说话的。黛玉虽不知原委，探春等却都晓
+得是议论金陵城中所居的薛家姨母之子姨表兄薛蟠，倚财仗势，打死人命，现在应
+天府案下审理。如今母舅王子腾得了信息，故遣他家内的人来告诉这边，意欲唤取
+进京之意。
+第四回
+薄命女偏逢薄命郎 葫芦僧乱判葫芦案
+却说黛玉同姊妹们至王夫人处，见王夫人与兄嫂处的来使计议家务，又说姨母家遭
+人命官司等语。因见王夫人事情冗杂，姊妹们遂出来，至寡嫂李氏房中来了。
+原来这李氏即贾珠之妻。珠虽夭亡，幸存一子，取名贾兰，今方五岁，已入学攻书
+。这李氏亦系金陵名宦之女，父名李守中，曾为国子监祭酒，族中男女无有不诵诗
+读书者。至李守中继承以来，便说“女子无才便有德”，故生了李氏时，便不十分
+令其读书，只不过将些《女四书》，《列女传》，《贤媛集》等三四种书，使他认
+得几个字，记得前朝这几个贤女便罢了，却只以纺绩井臼为要，因取名为李纨，字
+宫裁。因此这李纨虽青春丧偶，居家处膏粱锦绣之中，竟如槁木死灰一般，一概无
+见无闻，唯知侍亲养子，外则陪侍小姑等针黹诵读而已。今黛玉虽客寄于斯，日有
+这般姐妹相伴，除老父外，余者也都无庸虑及了。
+如今且说雨村，因补授了应天府，一下马就有一件人命官司详至案下，乃是两家争
+买一婢，各不相让，以至殴伤人命。彼时雨村即传原告之人来审。那原告道：“被
+殴死者乃小人之主人。因那日买了一个丫头，不想是拐子拐来卖的。这拐子先已得
+了我家的银子，我家小爷原说第三日方是好日子，再接入门。这拐子便又悄悄的卖
+与薛家，被我们知道了，去找拿卖主，夺取丫头。无奈薛家原系金陵一霸，倚财仗
+势，众豪奴将我小主人竟打死了。凶身主仆已皆逃走，无影无踪，只剩了几个局外
+之人。小人告了一年的状，竟无人作主。望大老爷拘拿凶犯，剪恶除凶，以救孤寡
+，死者感戴天恩不尽！”
+雨村听了大怒道：“岂有这样放屁的事！打死人命就白白的走了，再拿不来的！”
+因发签差公人立刻将凶犯族中人拿来拷问，令他们实供藏在何处，一面再动海捕文
+书。正要发签时，只见案边立的一个门子使眼色儿，－－不令他发签之意。雨村心
+下甚为疑怪，只得停了手，即时退堂，至密室，侍从皆退去，只留门子服侍。这门
+子忙上来请安，笑问：“老爷一向加官进禄，八九年来就忘了我了？”雨村道：“
+却十分面善得紧，只是一时想不起来。”那门子笑道：“老爷真是贵人多忘事，把
+出身之地竟忘了，不记当年葫芦庙里之事？”雨村听了，如雷震一惊，方想起往事
+。原来这门子本是葫芦庙内一个小沙弥，因被火之后，无处安身，欲投别庙去修行
+，又耐不得清凉景况，因想这件生意倒还轻省热闹，遂趁年纪蓄了发，充了门子。
+雨村那里料得是他，便忙携手笑道：“原来是故人。”又让坐了好谈。这门子不敢
+坐。雨村笑道：“贫贱之交不可忘。你我故人也，二则此系私室，既欲长谈，岂有
+不坐之理？”这门子听说，方告了座，斜签着坐了。
+雨村因问方才何故有不令发签之意。这门子道：“老爷既荣任到这一省，难道就没
+抄一张本省‘护官符’来不成？”雨村忙问：“何为‘护官符’？我竟不知。”门
+子道：“这还了得！连这个不知，怎能作得长远！如今凡作地方官者，皆有一个私
+单，上面写的是本省最有权有势，极富极贵的大乡绅名姓，各省皆然，倘若不知，
+一时触犯了这样的人家，不但官爵，只怕连性命还保不成呢！所以绰号叫作‘护官
+符’。方才所说的这薛家，老爷如何惹他！他这件官司并无难断之处，皆因都碍着
+情分面上，所以如此。”一面说，一面从顺袋中取出一张抄写的‘护官符’来，递
+与雨村，看时，上面皆是本地大族名宦之家的谚俗口碑。其口碑排写得明白，下面
+所注的皆是自始祖官爵并房次。石头亦曾抄写了一张，今据石上所抄云：
+贾不假，白玉为堂金作马。（宁国荣国二公之后，共二十房分，宁荣亲派八房在都
+外，现原籍住者十二房。）
+阿房宫，三百里，住不下金陵一个史。（保龄侯尚书令史公之后，房分共十八，都
+中现住者十房，原籍现居八房。）
+东海缺少白玉床，龙王来请金陵王。（都太尉统制县伯王公之后，共十二房，都中
+二房，余在籍。）
+丰年好大雪，珍珠如土金如铁。（紫薇舍人薛公之后，现领内府帑银行商，共八房
+分。）
+雨村犹未看完，忽听传点，人报：“王老爷来拜。”雨村听说，忙具衣冠出去迎接
+。有顿饭工夫，方回来细问。这门子道：“这四家皆连络有亲，一损皆损，一荣皆
+荣，扶持遮饰，俱有照应的。今告打死人之薛，就系丰年大雪之‘雪’也。也不单
+靠这三家，他的世交亲友在都在外者，本亦不少。老爷如今拿谁去？”雨村听如此
+说，便笑问门子道：“如你这样说来，却怎么了结此案？你大约也深知这凶犯躲的
+方向了？”
+门子笑道：“不瞒老爷说，不但这凶犯的方向我知道，一并这拐卖之人我也知道，
+死鬼买主也深知道。待我细说与老爷听：这个被打之死鬼，乃是本地一个小乡绅之
+子，名唤冯渊，自幼父母早亡，又无兄弟，只他一个人守着些薄产过日子。长到十
+八九岁上，酷爱男风，不喜女色。这也是前生冤孽，可巧遇见这拐子卖丫头，他便
+一眼看上了这丫头，立意买来作妾，立誓再不交结男子，也不再娶第二个了，所以
+三日后方过门。谁晓这拐子又偷卖与薛家，他意欲卷了两家的银子，再逃往他省。
+谁知又不曾走脱，两家拿住，打了个臭死，都不肯收银，只要领人。那薛家公子岂
+是让人的，便喝着手下人一打，将冯公子打了个稀烂，抬回家去三日死了。这薛公
+子原是早已择定日子上京去的，头起身两日前，就偶然遇见这丫头，意欲买了就进
+京的，谁知闹出这事来。既打了冯公子，夺了丫头，他便没事人一般，只管带了家
+眷走他的路。他这里自有兄弟奴仆在此料理，也并非为此些些小事值得他一逃走的
+。这且别说，老爷你当被卖之丫头是谁？”雨村笑道：“我如何得知。”门子冷笑
+道：“这人算来还是老爷的大恩人呢！他就是葫芦庙旁住的甄老爷的小姐，名唤英
+莲的。”雨村罕然道：“原来就是他！闻得养至五岁被人拐去，却如今才来卖呢？
+”
+门子道：“这一种拐子单管偷拐五六岁的儿女，养在一个僻静之处，到十一二岁，
+度其容貌，带至他乡转卖。当日这英莲，我们天天哄他顽耍，虽隔了七八年，如今
+十二三岁的光景，其模样虽然出脱得齐整好些，然大概相貌，自是不改，熟人易认
+。况且他眉心中原有米粒大小的一点胭脂〈疒计〉，从胎里带来的，所以我却认得
+。偏生这拐子又租了我的房舍居住，那日拐子不在家，我也曾问他。他是被拐子打
+怕了的，万不敢说，只说拐子系他亲爹，因无钱偿债，故卖他。我又哄之再四，他
+又哭了，只说‘我不记得小时之事！’这可无疑了。那日冯公子相看了，兑了银子
+，拐子醉了，他自叹道：‘我今日罪孽可满了！’后又听见冯公子令三日之后过门
+，他又转有忧愁之态。我又不忍其形景，等拐子出去，又命内人去解释他：‘这冯
+公子必待好日期来接，可知必不以丫鬟相看。况他是个绝风流人品，家里颇过得，
+素习又最厌恶堂客，今竟破价买你，后事不言可知。只耐得三两日，何必忧闷！’
+他听如此说，方才略解忧闷，自为从此得所。谁料天下竟有这等不如意事，第二日
+，他偏又卖与薛家。若卖与第二个人还好，这薛公子的混名人称‘呆霸王’，最是
+天下第一个弄性尚气的人，而且使钱如土，遂打了个落花流水，生拖死拽，把个英
+莲拖去，如今也不知死活。这冯公子空喜一场，一念未遂，反花了钱，送了命，岂
+不可叹！”
+雨村听了，亦叹道：“这也是他们的孽障遭遇，亦非偶然。不然这冯渊如何偏只看
+准了这英莲？这英莲受了拐子这几年折磨，才得了个头路，且又是个多情的，若能
+聚合了，倒是件美事，偏又生出这段事来。这薛家纵比冯家富贵，想其为人，自然
+姬妾众多，淫佚无度，未必及冯渊定情于一人者。这正是梦幻情缘，恰遇一对薄命
+儿女。且不要议论他，只目今这官司，如何剖断才好？”门子笑道：“老爷当年何
+其明决，今日何反成了个没主意的人了！小的闻得老爷补升此任，亦系贾府王府之
+力，此薛蟠即贾府之亲，老爷何不顺水行舟，作个整人情，将此案了结，日后也好
+去见贾府王府。”雨村道：“你说的何尝不是。但事关人命，蒙皇上隆恩，起复委
+用，实是重生再造，正当殚心竭力图报之时，岂可因私而废法？是我实不能忍为者
+。”门子听了，冷笑道：“老爷说的何尝不是大道理，但只是如今世上是行不去的
+。岂不闻古人有云：‘大丈夫相时而动’，又曰‘趋吉避凶者为君子’。依老爷这
+一说，不但不能报效朝廷，亦且自身不保，还要三思为妥。”
+雨村低了半日头，方说道：“依你怎么样？”门子道：“小人已想了一个极好的主
+意在此：老爷明日坐堂，只管虚张声势，动文书发签拿人。原凶自然是拿不来的，
+原告固是定要将薛家族中及奴仆人等拿几个来拷问。小的在暗中调停，令他们报个
+暴病身亡，令族中及地方上共递一张保呈，老爷只说善能扶鸾请仙，堂上设下乩坛
 
 
 
